# APass3

./: .gitignore  Bitmap.cpp  Bitmap.hpp  BitmapArray.cpp  BitmapArray.hpp  BitmapDIBHeader.cpp  BitmapOperation.cpp  BitmapOperation.hpp  BitmapOperationFactory.cpp  BitmapOperationFactory.hpp  CMakeLists.txt  CacheManager.cpp  CacheManager.hpp  ColorPallete.cpp  ColorPallete.hpp  CrcHash.cpp  CrcHash.hpp  HashOperation.cpp  HashOperation.hpp  HashOperationFactory.cpp  HashOperationFactory.hpp  Matrix.cpp  Matrix.hpp  MatrixOperation.cpp  MatrixOperation.hpp  MatrixOperationFactory.cpp  MatrixOperationFactory.hpp  Operation.cpp  Operation.hpp  OperationExceptions.cpp  OperationExceptions.hpp  OperationFactory.hpp  README.md  cache_tester  conventions_file (3).md  crc32.c  crc32.h  details  main.cpp  matrix2.txt
bitmap/: BitAdjuster.hpp  Bitmap.cpp  Bitmap.hpp  BitmapArray.cpp  BitmapArray.hpp  BitmapDIBHeader.cpp  BitmapDIBHeader.hpp  BitmapHeader.cpp  BitmapHeader.hpp  ColorPallete.cpp  ColorPallete.hpp
cache/: 2888718001.txt  4209843875.txt  815264268.txt  info.txt
cachemanager/: CacheManager.cpp  CacheManager.hpp
exceptions/: OperationExceptions.hpp
factories/: BitmapOperationFactory.cpp  BitmapOperationFactory.hpp  HashOperationFactory.cpp  HashOperationFactory.hpp  MatrixOperationFactory.cpp  MatrixOperationFactory.hpp  OperationFactory.hpp
hash/: CrcHash.cpp  CrcHash.hpp
manager/: CacheManager.cpp
matrix/: Matrix.cpp  Matrix.hpp
operations/: BitmapOperation.cpp  BitmapOperation.hpp  HashOperation.cpp  HashOperation.hpp  MatrixOperation.cpp  MatrixOperation.hpp  Operation.cpp  Operation.hpp
src/: CMakeLists.txt
src/bitmap/: BitAdjuster.cpp  BitmapArray.hpp  BitmapHeader.hpp
src/cachemanager/: CacheManager.cpp
src/factories/: BitmapOperationFactory.cpp  BitmapOperationFactory.hpp  HashOperationFactory.cpp  HashOperationFactory.hpp  MatrixOperationFactory.cpp  MatrixOperationFactory.hpp
src/hash/: CrcHash.cpp
src/operations/: BitmapOperation.cpp  BitmapOperation.hpp  HashOperation.cpp  HashOperation.hpp  MatrixOperation.cpp  MatrixOperation.hpp  Operation.cpp  Operation.hpp
